# NodulesApp

./: CMakeLists.txt
Controller/Headers/: Coordinator.h
Controller/Sources/: Coordinator.cpp  main.cpp
Model/: ArchivoConfig.txt  ArchivoConfigLin.txt  Bouma.cpp  CMakeLists.txt
Model/Headers/: BinaryFilters.h  BoumaMethods.h  Configuracion.h  DICOMIOManage.h  DICOMProperties.h  ImageFilters.h  ImageProcessingUtils.h  VTKVisualization.h
Model/Sources/: BinaryFilters.cpp  BoumaMethods.cpp  Configuracion.cpp  DICOMIOManage.cpp  DICOMProperties.cpp  ImageFilters.cpp  ImageProcessingUtils.cpp  VTKVisualization.cpp
Resources/: resources.qrc
View/Headers/: algorithmform.h  dicomdataform.h  fourpanelform.h  histogramForm.h  mainwindow.h
View/Sources/: algorithmform.cpp  dicomdataform.cpp  fourpanelform.cpp  histogramForm.cpp  mainwindow.cpp
View/Uis/: algorithmform.ui  dicomdataform.ui  fourpanelform.ui  histogramForm.ui  mainwindow.ui
